--- a/lots/templates/index.html
+++ b/lots/templates/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lot Divider</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <form method="POST" action="/portfolios/add">
+        {% csrf_token %}
+        <h2>Add Portfolio</h2>
+        <div>
+            <label>Portfolio Name</label>
+            <input type="text" name="name"></input>
+        </div>
+        <button>Submit</button>
+    </form>
+    <form method="POST" action="/lots/add">
+        {% csrf_token %}
+        <h2>Add Lot</h2>
+        <div>
+            <label>Portfolio Name</label>
+            <input type="text" name="portfolioName"></input>
+        </div>
+        <div>
+            <label>Portfolio Name</label>
+            <input type="text" name="portfolioName"></input>
+        </div>
+        <button>Submit</button>
+    </form>
 </body>
 </html>
