--- a/lots/templates/index.html
+++ b/lots/templates/index.html
@@ -67,7 +67,7 @@
             <input type="text" name="holdingTicker"></input>
         </div>
         <div>
-            <label>Account</label>
+            <label>Account Name</label>
             <input type="text" name="holdingAccount"></input>
         </div>
         <button>Submit</button>
