--- a/lots/templates/index.html
+++ b/lots/templates/index.html
@@ -7,6 +7,10 @@
     <title>Lot Divider</title>
 </head>
 <body>
+    <ul>
+        <li><a href="/portfolios/holdings/select">Select Holdings</a></li>
+    </ul>
+
     <form method="POST" action="/portfolios/add">
         {% csrf_token %}
         <h2>Add Portfolio</h2>
