--- a/lots/templates/registrationPage.html
+++ b/lots/templates/registrationPage.html
@@ -7,13 +7,23 @@
     <title>Lot Divider</title>
 </head>
 <body>
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
+            {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
+            {{ message }}
+        </li>
+        {% endfor %}
+    </ul>
+    {% endif %}
     <h1>Welcome to LotDivider</h1>
     <h2>Register</h2>
-    <form method="POST" action="/login">
+    <form method="POST" action="/register">
         {% csrf_token %}
         {{ form }}
-        <button>Login</button>
-        <a href="/">Already have an account? Log in here</a>
+        <button>Register</button>
+        <a href="/login">Already have an account? Log in here</a>
     </form>
 </body>
 </html>
