--- a/lots/templates/dashboard.html
+++ b/lots/templates/dashboard.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>User Dashboard</h1>
-    <a href='/projects/new'>New Project</a>
+    <a href="/projects/new/">New Project</a>
 </body>
 </html>
