--- a/lots/templates/newProject.html
+++ b/lots/templates/newProject.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Create A New Project</h1>
-    <form>
+    <form method="POST" action="/projects/new/">
         {% csrf_token %}
         {{ newProjectForm }}
         <button>Create New Project</button>
