adding Proposal model in models.py; editing DraftPortfolio/DraftAccount models to allow for blank and null values for name field

--- a/lots/templates/accountView.html
+++ b/lots/templates/accountView.html
@@ -11,7 +11,7 @@
 <body>
     <h1>{{ account.name }}</h1>
     <h2>{{ account.number }}</h2>
-    <a href="/projects/{{project.id}}/portfolios/{{portfolio.id}}/accounts/{{account.id}}/select">Select Holdings and Split</a>
+    <a href="/projects/{{project.id}}/portfolios/{{portfolio.id}}/accounts/{{account.id}}/proposals/new">Select Holdings and Split</a>
     <table>
         <thead>
             <tr>
