--- a/lots/templates/newProposal.html
+++ b/lots/templates/newProposal.html
@@ -11,8 +11,8 @@
 <body>
     <h1>{{ account.name }}</h1>
     <h2>{{ account.number }}</h2>
-    <a href="/projects/{{project.id}}/portfolios/{{portfolio.id}}/accounts/{{account.id}}/select">Select Holdings and Split</a>
-    <form method="POST" action="/projects/{{project.id}}/portfolios/{{portfolio.id}}/accounts/{{account.id}}/select">
+    <a href="/projects/{{project.id}}/portfolios/{{portfolio.id}}/accounts/{{account.id}}/">Back</a>
+    <form method="POST" action="/projects/{{project.id}}/portfolios/{{portfolio.id}}/accounts/{{account.id}}/proposals/new">
         {% csrf_token %}
         <div>
             <label for="method">Select Method:</label>
