adding proposal.html which displays results from the splitPortfolio function in services.py

--- a/lots/templates/newProposal.html
+++ b/lots/templates/newProposal.html
@@ -12,7 +12,7 @@
     <h1>{{ account.name }}</h1>
     <h2>{{ account.number }}</h2>
     <a href="/projects/{{project.id}}/portfolios/{{portfolio.id}}/accounts/{{account.id}}/">Back</a>
-    <form method="POST" action="/projects/{{project.id}}/portfolios/{{portfolio.id}}/accounts/{{account.id}}/proposals/new">
+    <form method="POST" action="/projects/{{project.id}}/portfolios/{{portfolio.id}}/accounts/{{account.id}}/proposals/new/">
         {% csrf_token %}
         <div>
             <label for="method">Select Method:</label>
