--- a/lots/templates/portfolioView.html
+++ b/lots/templates/portfolioView.html
@@ -12,6 +12,7 @@
     <h1>{{ portfolio.name }}</h1>
     <h2>{{ portfolio.number }}</h2>
     <table>
+        <h2>Accounts</h2>
         <thead>
             <tr>
                 <td>Account Name</td>
