added dashboard a tag to all views

--- a/lots/templates/dashboard.html
+++ b/lots/templates/dashboard.html
@@ -7,7 +7,7 @@
     <title>Lot Divider</title>
 </head>
 <body>
-    <h1>User Dashboard</h1>
+    <h1>Welcome {{user.name}}!</h1>
     <a href="/projects/new/">New Project</a>
     <table>
         <thead>
