--- a/lots/templates/accountView.html
+++ b/lots/templates/accountView.html
@@ -12,6 +12,7 @@
     <h1>{{ account.name }}</h1>
     <h2>{{ account.number }}</h2>
     <a href="/projects/{{project.id}}/portfolios/{{portfolio.id}}/accounts/{{account.id}}/proposals/new">Select Holdings and Split</a>
+    <a href="/dashboard/">Dashboard</a>
     <table>
         <h2>Holdings</h2>
         <thead>
