--- a/lots/templates/newProject.html
+++ b/lots/templates/newProject.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>Create A New Project</h1>
+    <a href="/dashboard/">Dashboard</a>
     <form method="POST" action="/projects/new/">
         {% csrf_token %}
         {{ newProjectForm }}
