--- a/lots/templates/portfolioView.html
+++ b/lots/templates/portfolioView.html
@@ -11,6 +11,7 @@
 <body>
     <h1>{{ portfolio.name }}</h1>
     <h2>{{ portfolio.number }}</h2>
+    <a href="/dashboard/">Dashboard</a>
     <table>
         <h2>Accounts</h2>
         <thead>
