--- a/lots/templates/projectDashboard.html
+++ b/lots/templates/projectDashboard.html
@@ -11,6 +11,7 @@
 <body>
     <h1>{{ project.name }}</h1>
     <h2>{{ project.number }}</h2>
+    <a href="/dashboard/">Dashboard</a>
     <table>
         <h2>Portfolios</h2>
         <thead>
