adding editProposal.html

--- a/lots/templates/dashboard.html
+++ b/lots/templates/dashboard.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Welcome {{user.name}}!</h1>
     <a href="/projects/new/">New Project</a>
+    <a href="/logout/">Logout</a>
     <table>
         <thead>
             <tr>
