--- a/lots/templates/newProposal.html
+++ b/lots/templates/newProposal.html
@@ -13,6 +13,7 @@
     <h2>{{ account.number }}</h2>
     <a href="/projects/{{project.id}}/portfolios/{{portfolio.id}}/accounts/{{account.id}}/">Back</a>
     <a href="/dashboard/">Dashboard</a>
+    <a href="/logout/">Logout</a>
     <form method="POST" action="/projects/{{project.id}}/portfolios/{{portfolio.id}}/accounts/{{account.id}}/proposals/new/">
         {% csrf_token %}
         <div>
