--- a/lots/templates/newProject.html
+++ b/lots/templates/newProject.html
@@ -11,6 +11,7 @@
 <body>
     <h1>Create A New Project</h1>
     <a href="/dashboard/">Dashboard</a>
+    <a href="/logout/">Logout</a>
     <form method="POST" action="/projects/new/">
         {% csrf_token %}
         {{ newProjectForm }}
