--- a/lots/templates/projectDashboard.html
+++ b/lots/templates/projectDashboard.html
@@ -12,6 +12,7 @@
     <h1>{{ project.name }}</h1>
     <h2>{{ project.number }}</h2>
     <a href="/dashboard/">Dashboard</a>
+    <a href="/logout/">Logout</a>
     <table>
         <h2>Portfolios</h2>
         <thead>
@@ -39,20 +40,25 @@
             <tr>
                 <td>Proposal Name</td>
                 <td>Proposal Number</td>
-                <td>Related Portfolios</td>
+                <td>Draft Portfolios</td>
+                <td>Actions</td>
             </tr>
         </thead>
         {% for proposal in project.proposals.all %}
         <tbody>
             <tr>
-                <td>proposal.number</td>
-                <td>proposal.name</td>
+                <td>{{proposal.number}}</td>
+                <td>{{proposal.name}}</td>
                 <td>
                     <ul>
                         {% for draftPortfolio in proposal.draftPortfolios.all %}
                         <li>{{draftPortfolio.name}} | {{draftPortfolio.number}}</li>
                         {%endfor%}
                     </ul>
+                </td>
+                <td>
+                    <a href="/proposals/{{proposal.id}}/">View</a>
+                    <a href="/proposals/{{proposal.id}}/edit/">Edit</a>
                 </td>
             </tr>
         </tbody>
