Adding unit tests in lots/tests.py

--- a/lots/templates/dashboard.html
+++ b/lots/templates/dashboard.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static './lots.css'%}">
     <title>Lot Divider</title>
 </head>
 <body>
@@ -12,17 +14,18 @@
     <a href="/portfolios/new">Add a Portfolio</a>
     <a href="/logout/">Logout</a>
     <table>
+        <h2>Your projects</h2>
         <thead>
             <tr>
-                <td>Project Number</td>
-                <td>Project Name</td>
-                <td>Link</td>
+                <th>Project Number</th>
+                <th>Project Name</th>
+                <th>Link</th>
             </tr>
         </thead>
         <tbody>
             {% for project in projects %}
             <tr>
-                <td>{{project.number}}</td>
+                <td>{{project.id}}</td>
                 <td>{{project.name}}</td>
                 <td>
                     <a href="/projects/{{project.id}}/">Go</a>
