adding elif statement in LotService.splitPortfolio to allow for LIFO choice

--- a/lots/static/lots.css
+++ b/lots/static/lots.css
@@ -83,3 +83,20 @@ table tr:hover{
     width: 96%;
     padding: 2%
 }
+
+.navBar{
+    font-family: Arial, Helvetica, sans-serif;
+    /* background-color: black; */
+    list-style-type: none;
+    padding: 0px;
+}
+
+.navBar li, .navBar a{
+    display: inline;
+    margin: 0%;
+    text-decoration: none;
+    color: white;
+    background-color: green;
+    vertical-align: top;
+    text-align:center;
+}
