--- a/lots/templates/dashboard.html
+++ b/lots/templates/dashboard.html
@@ -10,9 +10,11 @@
 </head>
 <body>
     <h1>Welcome {{user.name}}!</h1>
-    <a href="/projects/new/">New Project</a>
-    <a href="/portfolios/new">Add a Portfolio</a>
-    <a href="/logout/">Logout</a>
+    <ul class="navBar">
+        <li><a href="/projects/new/">New Project</a></li>
+        <li><a href="/portfolios/new">Add a Portfolio</a></li>
+        <li><a href="/logout/">Logout</a>
+    </ul>
     <table>
         <h2>Your projects</h2>
         <thead>
