--- a/lots/templates/proposal.html
+++ b/lots/templates/proposal.html
@@ -1,3 +1,4 @@
+{% load proposal_extras %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,40 +10,41 @@
 </head>
 
 <body>
+    
     <h1>Proposal Name: {{ proposal.name }}</h1>
-    <h2>{{ proposal.number }}</h2>
+    <h2>Proposal Number: {{ proposal.number }}</h2>
     <a href="/proposals/{{proposal.id}}/edit">Edit</a>
     <a href="/projects/{{proposal.project.id}}/">Back</a>
     <a href="/dashboard/">Dashboard</a>
     <a href="/logout/">Logout</a>
-    {%for portfolio in proposal.draftPortfolios.all %}
-    <h2>{{portfolio.name}}</h2>
-    <h2>{{portfolio.number}}</h2>
+    {% for draftHolding, draftLots in proposalSummary.lots.items %}
+    <h2>{{draftLots.first.draftHolding.draftAccount.draftPortfolio.name}}</h2>
+    <h2>{{draftLots.first.draftHolding.draftAccount.draftPortfolio.number}}</h2>
     <table>
         <thead>
             <tr>
                 <td>Ticker</td>
-                <td>Name</td>
                 <td>Lot Reference Number</td>
-                <td>Units</td>
+                <td>Units Used</td>
+                <td>Units In Lot</td>
+                <td>Total Federal Cost</td>
+                <td>Cost Per Share</td>
             </tr>
         </thead>
         <tbody>
-            {% for account in portfolio.draftAccounts.all %}
-            {% for holding in account.draftHoldings.all %}
-            {% for lot in holding.draftTaxLots.all %}
+            {% for lot in draftLots.all %}
             <tr>
-                <td>{{ lot.draftHolding.security.ticker }}</td>
-                <td>{{ lot.name }}</td>
-                <td>{{ lot.number }}</td>
-                <td>{{ lot.units }}</td>
+                <td>{{lot.draftHolding.security.ticker}}</td>
+                <td>{{lot.number}}</td>
+                <td>{{lot.units}}</td>
+                <td>{{lot.unitsAvailable}}</td>
+                <td>{{lot.totalFederalCost}}</td>
+                <td>{{lot.cps}}</td>
             </tr>
-            {% endfor %}
-            {% endfor %}
             {% endfor %}
         </tbody>
     </table>
-    {%endfor%}
+    {% endfor %}
 </body>
 
 </html>
