adding splitPortfolio2 in an effort to fix calculations from splitPortfolio1. Still a work in a progress

--- a/lots/templates/proposal.html
+++ b/lots/templates/proposal.html
@@ -56,9 +56,9 @@
             </tr>
             {% endfor %}
             <tr>
-                <td>Proposed Totals:</td>
+                <td>Proposed Portfolio Total:</td>
                 <td></td>
-                <td>{{item|getDraftPortfolioTotalMV|floatformat:4|intcomma}}</td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
