--- a/lots/templates/proposal.html
+++ b/lots/templates/proposal.html
@@ -18,7 +18,7 @@
     <a href="/projects/{{proposal.project.id}}/">Back</a>
     <a href="/dashboard/">Dashboard</a>
     <a href="/logout/">Logout</a>
-    {% for key, item in proposalSummary.lots.items %}
+    <!-- {% for key, item in proposalSummary.lots.items %}
     <h2>Draft Portfolio Name: {{key.0.name}}</h2>
     <h2>Draft Portfolio Number: {{key.0.number}}</h2>
     <table>
@@ -66,7 +66,29 @@
             </tr>
         </tbody>
     </table>
-    {% endfor %}
+    {% endfor %} -->
+    <table>
+        <thead>
+            <tr>
+                <th>Ticker</th>
+                <th>Referenced Lot</th>
+                {% for draftPortfolio in proposal.draftPortfolios.all %}
+                <th>Units in Draft Account {{draftPortfolio.draftAccounts.first.id}}</th>
+                {% endfor %}
+            </tr>
+        </thead>
+        <tbody>
+            {% for lot in test%}
+            <tr>
+                <td>{{lot.holding.security.ticker}}</td>
+                <td>{{lot.number}}</td>
+                {% for draftPortfolio in proposal.draftPortfolios.all %}
+                    <td>{{lot|getUnitsFromDraftLot:draftPortfolio.draftAccounts.first}}</td>
+                {% endfor %}
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 </body>
 
 </html>
