--- a/lots/templates/proposal.html
+++ b/lots/templates/proposal.html
@@ -18,77 +18,7 @@
     <a href="/projects/{{proposal.project.id}}/">Back</a>
     <a href="/dashboard/">Dashboard</a>
     <a href="/logout/">Logout</a>
-    <!-- {% for key, item in proposalSummary.lots.items %}
-    <h2>Draft Portfolio Name: {{key.0.name}}</h2>
-    <h2>Draft Portfolio Number: {{key.0.number}}</h2>
-    <table>
-        <thead>
-            <tr>
-                <td>Ticker</td>
-                <td>Lot Reference Number</td>
-                <td>Units Used</td>
-                <td>Units In Lot</td>
-                <td>Total Federal Cost</td>
-                <td>Cost Per Share</td>
-                <td>{{tmv|tmvLabel}}</td>
-            </tr>
-        </thead>
-        <tbody>
-            {% for setOfLots in item %} 
-            {% for lot in setOfLots %}
-            <tr>
-                <td>{{lot.draftHolding.security.ticker}}</td>
-                <td>{{lot.number}}</td>
-                <td>{{lot.units|floatformat:4|intcomma}}</td>
-                <td>{{lot.unitsAvailable|floatformat:4|intcomma}}</td>
-                <td>{{lot.totalFederalCost|floatformat:2|intcomma}}</td>
-                <td>{{lot.cps|floatformat:2|intcomma}}</td>
-            </tr>
-            {% endfor %}
-            <tr>
-                <td>Total</td>
-                <td></td>
-                <td>{{setOfLots|getTotalUnits|floatformat:4|intcomma}}</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>${{setOfLots|getTotalMV|floatformat:2|intcomma}}</td>
-            </tr>
-            {% endfor %}
-            <tr>
-                <td>Proposed Portfolio Total:</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>${{item|getDraftPortfolioTotalMV|floatformat:2|intcomma}}</td>
-            </tr>
-        </tbody>
-    </table>
-    {% endfor %} -->
-    <table>
-        <thead>
-            <tr>
-                <th>Ticker</th>
-                <th>Referenced Lot</th>
-                {% for draftPortfolio in proposal.draftPortfolios.all %}
-                <th>Units in Draft Account {{draftPortfolio.draftAccounts.first.id}}</th>
-                {% endfor %}
-            </tr>
-        </thead>
-        <tbody>
-            {% for lot in test%}
-            <tr>
-                <td>{{lot.holding.security.ticker}}</td>
-                <td>{{lot.number}}</td>
-                {% for draftPortfolio in proposal.draftPortfolios.all %}
-                    <td>{{lot|getUnitsFromDraftLot:draftPortfolio.draftAccounts.first}}</td>
-                {% endfor %}
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+    {% proposalTable proposal test %}
 </body>
 
 </html>
