adding lot details below summary rows in proposalTable.html; resolved issues with interface Error, they were due to the yfinance API returning unexpected results (duplicate information)

--- a/lots/templates/proposal.html
+++ b/lots/templates/proposal.html
@@ -19,7 +19,7 @@
     <a href="/dashboard/">Dashboard</a>
     <a href="/logout/">Logout</a>
     <!-- the results are a list of securities with the matching portfolios -->
-    {% proposalTable proposal results %}
+    {% proposalTable proposal summaryTotals proposalLots %}
 
 </body>
 
