--- a/lots/templates/proposalTable.html
+++ b/lots/templates/proposalTable.html
@@ -6,14 +6,14 @@
             <th>Referenced Lot</th>
             {% for draftPortfolio in proposal.draftPortfolios.all %}
             <th>Units in Draft Account {{draftPortfolio.draftAccounts.first.id}}</th>
-            <th>Total MV in Holding</th>
+            <th>Total Cost For Holding in Draft Account {{draftPortfolio.draftAccounts.first.id}}</th>
+            <th>Total MV For Holding in Draft Account {{draftPortfolio.draftAccounts.first.id}}</th>
             {% endfor %}
         </tr>
     </thead>
     <tbody>
         {% for ticker in tickers %}
-        {% proposalTableRow results ticker closingPrices closingDate %}
+        {% proposalTableRow summaryTotals ticker closingPrices closingDate proposal proposalLots %}
         {% endfor %}
-        <!-- for each ticker, create a row, pass in a ticker to the filter -->
     </tbody>
 </table>
